--- a/Silver/MainWindow.xaml
+++ b/Silver/MainWindow.xaml
@@ -78,7 +78,7 @@
                     <DataGridTextColumn Binding="{Binding Assets}" Header="Assets" Width="50"/>
                 </DataGrid.Columns>
             </DataGrid>
-            <TextBox x:Name="WorkingDirTxt" Height="24" Margin="92,5,192.6,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="16"/>
+            <TextBox x:Name="WorkingDirTxt" Height="24" Margin="92,5,192.6,0" TextWrapping="WrapWithOverflow" VerticalAlignment="Top" FontSize="16"/>
             <Button HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Width="24" Height="24" BorderBrush="{x:Null}" Background="{x:Null}" Click="Click_Back">
                 <Image Source="Resources/up.ico" RenderTransformOrigin="0.5,0.5">
                     <Image.RenderTransform>
